gorm and crud operations added
